added wallet create endpoint
